--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header{
     align-items: center;
     /* margin: 30px 0px;  */
     cursor: pointer;
-    flex: 1 1 auto;
+    flex: 1 0 auto;
     /* margin:  30px; */
 }
 .partners-item:hover{
@@ -157,6 +157,11 @@ header{
     .container{
         padding: 20px 100px 0px;
     }}
+    @media (max-width: 1086px){
+        .container{
+            padding: 20px 60px 0px;
+        }
+    }    
 @media (max-width: 1024px){
         .input__search{
             min-width: 360px;
