--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ header{
     color: #BBC4D6;
 
 }
-.profile__logo--mobile{
+.profile__btn--mobile{
     display: none;
 }
 .partners__title{
@@ -156,7 +156,8 @@ header{
     }
     .container{
         padding: 20px 100px 0px;
-    }}
+    }
+}
     @media (max-width: 1086px){
         .container{
             padding: 20px 60px 0px;
@@ -176,14 +177,10 @@ header{
     }
 @media (max-width: 768px){
         .input__search{
-            min-width: 344px;
+            min-width: 320px;
         }
         .container{
-            padding: 20px 0px 0px;
-        }
-        .partners-item{
-            width: 229px;
-            height: 120px;
+            padding: 20px 20px 0px;
         }
     }
 @media (max-width: 660px){
@@ -221,7 +218,7 @@ header{
         .profile__btn::before{
             display: none;
         }
-        .profile__logo--mobile{
+        .profile__btn--mobile{
             display: block;
         }
     }
